## Process this file with automake to produce Makefile.in
# vim: set noet sw=2 ts=8 sts=0:
#
# Copyright (C) Joachim Falk <joachim.falk@gmx.de> $Date: 2003/01/15 16:43:20 $
#
# Makefile.am is part of the jflib distribution of Joachim Falk;
# you can redistribute it and/or modify it under the terms of the
# GNU General Public License as published by the Free Software Foundation;
# either version 2 of the License, or (at your option) any later version.
#
# The jflib distributio is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public
# License along with this program; If not, write to
# the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
# Boston, MA 02111-1307, USA.
#
# $Log$

include $(auxdir)/jfrules.mk

SUBDIRS=

nobase_include_HEADERS = \
	systemcvpc/AbstractComponent.hpp \
	systemcvpc/Attribute.hpp \
	systemcvpc/BlockingTransport.hpp \
	systemcvpc/ComponentInfo.hpp \
	systemcvpc/ComponentModel.hpp \
	systemcvpc/ComponentObserver.hpp \
	systemcvpc/config/common.hpp \
	systemcvpc/config/Component.hpp \
	systemcvpc/config/ConfigException.hpp \
	systemcvpc/config/Route.hpp \
	systemcvpc/config/Scheduler.hpp \
	systemcvpc/config/Timing.hpp \
	systemcvpc/config/VpcApi.hpp \
	systemcvpc/config/VpcTask.hpp \
	systemcvpc/coupling/VPCEvent.hpp \
	systemcvpc/datatypes.hpp \
	systemcvpc/debug_config.hpp \
	systemcvpc/debug.hpp \
	systemcvpc/debug_off.hpp \
	systemcvpc/debug_on.hpp \
	systemcvpc/Delayer.hpp \
	systemcvpc/Director.hpp \
	systemcvpc/dynload/dll.hpp \
	systemcvpc/EventPair.hpp \
	systemcvpc/FastLink.hpp \
	systemcvpc/FunctionTimingPool.hpp \
	systemcvpc/HysteresisLocalGovernor.hpp \
	systemcvpc/InvalidArgumentException.hpp \
	systemcvpc/PCBPool.hpp \
	systemcvpc/PluggablePowerGovernor.hpp \
	systemcvpc/Pool.hpp \
	systemcvpc/PowerGovernor.hpp \
	systemcvpc/PowerMode.hpp \
	systemcvpc/PowerSumming.hpp \
	systemcvpc/ProcessControlBlock.hpp \
	systemcvpc/RouteImpl.hpp \
	systemcvpc/RoutePool.hpp \
	systemcvpc/ScheduledTask.hpp \
	systemcvpc/SelectFastestPowerModeGlobalGovernor.hpp \
	systemcvpc/StaticRoute.hpp \
	systemcvpc/Task.hpp \
	systemcvpc/TaskPool.hpp \
	systemcvpc/timetriggered/tt_support.hpp \
	systemcvpc/TimingModifier.hpp \
	systemcvpc/VPCBuilder.hpp \
	systemcvpc/vpc_config.h \
	systemcvpc/VpcDomErrorHandler.hpp \
	vpc_api.hpp \
	vpc.hpp
