## Process this file with automake to produce Makefile.in
# vim: set noet sw=2 ts=8 sts=0:
#
# Copyright (C) Joachim Falk <joachim.falk@gmx.de> $Date: 2003/01/15 16:43:20 $
#
# Makefile.am is part of the jflib distribution of Joachim Falk;
# you can redistribute it and/or modify it under the terms of the
# GNU General Public License as published by the Free Software Foundation;
# either version 2 of the License, or (at your option) any later version.
#
# The jflib distributio is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public
# License along with this program; If not, write to
# the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
# Boston, MA 02111-1307, USA.
#
# $Log$

include $(auxdir)/jfrules.mk

SUBDIRS=

nobase_include_HEADERS = \
	systemcvpc/ExecModelling/LookupPowerTimeModel.hpp \
	\
	systemcvpc/Extending/ComponentObserverIf.hpp \
	systemcvpc/Extending/ComponentTracerIf.hpp \
	systemcvpc/Extending/Task.hpp \
	systemcvpc/Extending/TaskInstance.hpp \
	\
	systemcvpc/Routing/Ignore.hpp \
	systemcvpc/Routing/Static.hpp \
	\
	systemcvpc/Attribute.hpp \
	systemcvpc/Component.hpp \
	systemcvpc/ComponentObserver.hpp \
	systemcvpc/ComponentTracer.hpp \
	systemcvpc/ConfigException.hpp \
	systemcvpc/datatypes.hpp \
	systemcvpc/EventPair.hpp \
	systemcvpc/ExecModel.hpp \
	systemcvpc/InvalidArgumentException.hpp \
	systemcvpc/PossibleAction.hpp \
	systemcvpc/PowerMode.hpp \
	systemcvpc/Route.hpp \
	systemcvpc/ScheduledTask.hpp \
	systemcvpc/Scheduler.hpp \
	systemcvpc/Timing.hpp \
	systemcvpc/TimingModifier.hpp \
	systemcvpc/VpcApi.hpp \
	systemcvpc/VPCEvent.hpp \
	systemcvpc/VpcTask.hpp \
	\
	vpc_api.hpp \
	vpc.hpp
