# -*- tab-width:8; indent-tabs-mode:true; -*-
# vim: set noet sw=2 ts=8 sts=0:
#
# Copyright (c)
#   2010 FAU -- Joachim Falk <joachim.falk@fau.de>
#   2010 FAU -- Martin Streubuehr <martin.streubuehr@fau.de>
#   2011 FAU -- Martin Streubuehr <martin.streubuehr@fau.de>
#   2011 FAU -- Sebastian Graf <sebastian.graf@fau.de>
#   2011 FAU -- Tim Grocki <grocki@codesign.informatik.uni-erlangen.de>
#   2012 FAU -- Tim Grocki <grocki@codesign.informatik.uni-erlangen.de>
#   2016 FAU -- Joachim Falk <joachim.falk@fau.de>
#   2017 FAU -- Joachim Falk <joachim.falk@fau.de>
#   2017 FAU -- Simone Müller <simone.mueller@fau.de>
#   2018 FAU -- Joachim Falk <joachim.falk@fau.de>
#   2020 FAU -- Joachim Falk <joachim.falk@fau.de>
# 
# This library is free software; you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by the Free
# Software Foundation; either version 2 of the License, or (at your option) any
# later version.
# 
# This library is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for more
# details.
# 
# You should have received a copy of the GNU Lesser General Public License
# along with this library; if not, write to the Free Software Foundation, Inc.,
# 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.

## Process this file with automake to produce Makefile.in

include $(auxdir)/jfrules.mk

SUBDIRS=

nobase_include_HEADERS = \
	systemcvpc/ExecModelling/LookupPowerTimeModel.hpp \
	\
	systemcvpc/Extending/ComponentObserverIf.hpp \
	systemcvpc/Extending/ComponentTracerIf.hpp \
	systemcvpc/Extending/Task.hpp \
	systemcvpc/Extending/TaskInstance.hpp \
	\
	systemcvpc/Routing/Ignore.hpp \
	systemcvpc/Routing/Static.hpp \
	\
	systemcvpc/Attribute.hpp \
	systemcvpc/Component.hpp \
	systemcvpc/ComponentObserver.hpp \
	systemcvpc/ComponentTracer.hpp \
	systemcvpc/ConfigException.hpp \
	systemcvpc/datatypes.hpp \
	systemcvpc/EventPair.hpp \
	systemcvpc/ExecModel.hpp \
	systemcvpc/InvalidArgumentException.hpp \
	systemcvpc/PossibleAction.hpp \
	systemcvpc/Power.hpp \
	systemcvpc/PowerMode.hpp \
	systemcvpc/Route.hpp \
	systemcvpc/ScheduledTask.hpp \
	systemcvpc/Scheduler.hpp \
	systemcvpc/Time.hpp \
	systemcvpc/Timing.hpp \
	systemcvpc/TimingModifier.hpp \
	systemcvpc/VpcApi.hpp \
	systemcvpc/VPCEvent.hpp \
	systemcvpc/VpcTask.hpp \
	\
	vpc_api.hpp \
	vpc.hpp
